--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -422,3 +422,30 @@
   parent CONFIG_MUTEK_SLAB
   default undefined 
 %config end
+
+######################################################################
+# Bytecode
+
+%config CONFIG_MUTEK_BYTECODE
+  desc Enable the mutekh customizable bytecode interpreter.
+  flags auto
+  parent CONFIG_MUTEK
+%config end
+
+%config CONFIG_MUTEK_BYTECODE_CHECKING
+  desc Enable bytecode checks at execution.
+  desc When this option is disabled, the bytecode may crash the system.
+  parent CONFIG_MUTEK_BYTECODE
+%config end
+
+%config CONFIG_MUTEK_BYTECODE_DEBUG
+  desc Enable verbose bytecode error reporting.
+  parent CONFIG_MUTEK_BYTECODE
+%config end
+
+%config CONFIG_MUTEK_BYTECODE_TRACE
+  desc Enable verbose bytecode execution.
+  parent CONFIG_MUTEK_BYTECODE
+  depend CONFIG_MUTEK_BYTECODE_DEBUG
+%config end
+
