added new SPI device class

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -163,6 +163,13 @@
   desc Enable SPI device support
 %config end
 
+%config CONFIG_DEVICE_SPI_REQUEST
+  parent CONFIG_DEVICE_SPI
+  depend CONFIG_MUTEK_BYTECODE
+  flags auto
+  desc Enable SPI device requests scheduler
+%config end
+
 %config CONFIG_DEVICE_ENUM
   parent CONFIG_DEVICE
   depend CONFIG_DEVICE_TREE
