added experimental efm32 usart driver

--- a/arch/efm32/drivers/Makefile
+++ b/arch/efm32/drivers/Makefile
@@ -3,3 +3,7 @@ ifeq ($(CONFIG_DRIVER_EFM32_LEUART), defined)
 subdirs += leuart
 endif
 
+ifeq ($(CONFIG_DRIVER_EFM32_USART), defined)
+subdirs += usart
+endif
+
