improved timer device API

--- a/arch/soclib/drivers/vci_xicu/Makefile
+++ b/arch/soclib/drivers/vci_xicu/Makefile
@@ -1,3 +1,11 @@
 
 objs = xicu.o
 
+ifeq ($(CONFIG_DRIVER_SOCLIB_VCI_XICU_TIMER), defined)
+objs += xicu_timer.o
+endif
+
+ifeq ($(CONFIG_DRIVER_SOCLIB_VCI_XICU_ICU), defined)
+objs += xicu_icu.o
+endif
+
