--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -242,3 +242,15 @@
   parent CONFIG_CPU_ARM
 %config end
 
+%config CONFIG_CPU_ARM_TIMER_SYSTICK
+  desc Enable timer driver for ARM-m SysTick
+  parent CONFIG_CPU_ARM_ARCH_PROFILE_M
+  default defined
+%config end
+
+%config CONFIG_CPU_ARM_TIMER_DWTCYC
+  desc Enable timer driver for ARM-v7m DWT cycle counter
+  parent CONFIG_CPU_ARM_ARCH_PROFILE_M
+  when CONFIG_CPU_ARM_ARCH_VERSION>=7
+%config end
+
