added device drivers for efm32 timer and efm32 rtc

--- a/arch/efm32/drivers/Makefile
+++ b/arch/efm32/drivers/Makefile
@@ -7,3 +7,10 @@ ifeq ($(CONFIG_DRIVER_EFM32_USART), defined)
 subdirs += usart
 endif
 
+ifeq ($(CONFIG_DRIVER_EFM32_TIMER), defined)
+subdirs += timer 
+endif
+
+ifeq ($(CONFIG_DRIVER_EFM32_RTC), defined)
+subdirs += rtc 
+endif
