--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -119,7 +119,7 @@
 
 %config CONFIG_MUTEK_CONSOLE
   desc Enable console based on a char device driver.
-  when CONFIG_DEVICE_CHAR
+  depend CONFIG_DEVICE_CHAR
   parent CONFIG_MUTEK
   require CONFIG_MUTEK_CONSOLE_DEVICE_PATHS
 %config end
