enable CONFIG_COMPILE_COLLECT by default

--- a/scripts/global.config
+++ b/scripts/global.config
@@ -20,6 +20,7 @@
 %config CONFIG_COMPILE_COLLECT
   flags root
   desc Enable symbols garbage collection to reduce binary size
+  default defined
 %config end
 
 %config CONFIG_COMPILE_DEBUG
