improved device resources code, added static device table, fixed build without CONFIG_DEVICE_TREE

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -13,8 +13,8 @@
 %init end
 
 %init INIT_DEVICE_TREE
-  parent CONFIG_DEVICE
-  desc Initialize device tree
+  parent CONFIG_DEVICE_TREE
+  desc Initialize the device tree and attach statically defined devices
   during INIT_DEVICE
   function device_tree_init
 %init end
@@ -28,7 +28,7 @@
 
 %init INIT_DEVICE_DRIVERS 
   parent CONFIG_DEVICE
-  desc Attach available drivers to devices in tree and initialize devices
+  desc Try to find available drivers and initialize all registered devices
   during INIT_DEVICE
   after INIT_DEVICE_ENUM
   function libdevice_drivers_init
@@ -43,7 +43,8 @@
 
 %config CONFIG_DEVICE_TREE
   parent CONFIG_DEVICE
-  desc Have all device nodes sorted in a tree
+  desc Enable devices to be enumerated dynamically and stored in a tree.
+  desc When this is disabled, a static device table is used instead.
   default defined
 %config end
 
