added support for efm32 Wonder Gecko mcu

--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -4,7 +4,7 @@
   module arch Hexo
   parent CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=efm32
-  single CONFIG_EFM32_ZERO_GECKO CONFIG_EFM32_LEOPARD_GECKO
+  single CONFIG_EFM32_ZERO_GECKO CONFIG_EFM32_LEOPARD_GECKO CONFIG_EFM32_WONDER_GECKO
 %config end
 
 %init INIT_EFM32_MEM_ALLOC
@@ -23,6 +23,12 @@
   desc Support for EFM32 Leopard Gecko family of microcontrollers
   parent CONFIG_ARCH_EFM32
   depend CONFIG_CPU_ARM_CORTEXM3
+%config end
+
+%config CONFIG_EFM32_WONDER_GECKO
+  desc Support for EFM32 Wonder Gecko family of microcontrollers
+  parent CONFIG_ARCH_EFM32
+  depend CONFIG_CPU_ARM_CORTEXM4
 %config end
 
 %config CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
@@ -56,6 +62,20 @@
 
 %init INIT_EFM32_EARLY_CONSOLE_LEUART_STK3600
   parent CONFIG_EFM32_EARLY_CONSOLE_LEUART_STK3600
+  during INIT_MUTEK_EARLY_CONSOLE
+  function efm32_early_console_leuart_init
+%init end
+
+%config CONFIG_EFM32_EARLY_CONSOLE_LEUART_STK3800
+  desc Efm32 early console output using LEUART on the STK3800 Wonder gecko starter kit
+  parent CONFIG_ARCH_EFM32
+  provide CONFIG_MUTEK_EARLY_CONSOLE
+  require CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
+  depend CONFIG_EFM32_WONDER_GECKO
+%config end
+
+%init INIT_EFM32_EARLY_CONSOLE_LEUART_STK3800
+  parent CONFIG_EFM32_EARLY_CONSOLE_LEUART_STK3800
   during INIT_MUTEK_EARLY_CONSOLE
   function efm32_early_console_leuart_init
 %init end
