added kroutine, a deferred callback function service

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -291,6 +291,20 @@
   desc Mutek semaphore functions are empty when the scheduler is disabled in the configuration.
 %config end
 
+%config CONFIG_MUTEK_KROUTINE_SCHED_SWITCH
+  desc Support deferred execution of kernel routine on next scheduler context switch
+  parent CONFIG_MUTEK
+  flags auto
+  depend CONFIG_MUTEK_SCHEDULER
+%config end
+
+%config CONFIG_MUTEK_KROUTINE_IDLE
+  desc Support deferred execution of kernel routine on processor idle state
+  parent CONFIG_MUTEK
+  flags auto
+  depend CONFIG_MUTEK_SCHEDULER
+%config end
+
 ######################################################################
 #		Memory allocator
 
