--- a/arch/efm32/drivers/rtc/rtc.config
+++ b/arch/efm32/drivers/rtc/rtc.config
@@ -2,6 +2,7 @@
 %config CONFIG_DRIVER_EFM32_RTC
   desc Enable EFM32 Real Time Counter
   parent CONFIG_ARCH_EFM32
+  depend CONFIG_DEVICE_TIMER
   suggest CONFIG_DEVICE_IRQ
 %config end
 
