--- a/arch/efm32/drivers/timer/timer.config
+++ b/arch/efm32/drivers/timer/timer.config
@@ -2,6 +2,7 @@
 %config CONFIG_DRIVER_EFM32_TIMER
   desc Enable EFM32 Timer
   parent CONFIG_ARCH_EFM32
+  depend CONFIG_DEVICE_TIMER
   suggest CONFIG_DEVICE_IRQ
 %config end
 
