added driver for the bcm2835 system timer

--- a/arch/raspberry/drivers/Makefile
+++ b/arch/raspberry/drivers/Makefile
@@ -3,3 +3,7 @@ ifeq ($(CONFIG_DRIVER_ICU_BCM2835), defined)
 subdirs += bcm2835_icu
 endif
 
+ifeq ($(CONFIG_DRIVER_SYSTIMER_BCM2835), defined)
+subdirs += bcm2835_systimer
+endif
+
