changed default value of CONFIG_MUTEK_CONSOLE_DEVICE_PATHS

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -128,7 +128,7 @@
   desc Specify the candidate console device paths in the device tree
   parent CONFIG_MUTEK_CONSOLE
   flags value
-  default "console uart*"
+  default "console* uart* tty*"
 %config end
 
 %init INIT_MUTEK_CONSOLE
