--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -7,8 +7,7 @@ ifeq ($(CONFIG_HEXO_IPI), defined)
 objs += ipi.o
 endif
 
-doc_headers = hexo/atomic.h hexo/cpu.h hexo/ipi.h hexo/mmu.h            \
-	hexo/interrupt.h hexo/local.h hexo/error.h hexo/endian.h        \
-	hexo/context.h hexo/iospace.h hexo/segment.h hexo/init.h        \
-	hexo/lock.h hexo/types.h hexo/vmem.h hexo/ordering.h            \
-	hexo/power.h
+doc_headers = hexo/asm.h hexo/atomic.h hexo/context.h hexo/cpu.h        \
+        hexo/decls.h hexo/endian.h hexo/error.h hexo/interrupt.h        \
+        hexo/iospace.h hexo/ipi.h hexo/local.h hexo/lock.h              \
+        hexo/ordering.h hexo/types.h
