added efm32 gpio driver

--- a/arch/efm32/drivers/Makefile
+++ b/arch/efm32/drivers/Makefile
@@ -14,3 +14,7 @@ endif
 ifeq ($(CONFIG_DRIVER_EFM32_RTC), defined)
 subdirs += rtc 
 endif
+
+ifeq ($(CONFIG_DRIVER_EFM32_GPIO), defined)
+subdirs += gpio
+endif
