generic bytecode: added LT, LTEQ, BITS, BITC opcodes, removed RSB, other improvements

--- a/examples/bytecode/config
+++ b/examples/bytecode/config
@@ -13,5 +13,9 @@
   CONFIG_MUTEK_BYTECODE
   CONFIG_APP_START
 
+  CONFIG_MUTEK_BYTECODE_CHECKING
+  CONFIG_MUTEK_BYTECODE_DEBUG
+#  CONFIG_MUTEK_BYTECODE_TRACE
+
   %include arch/arch.build
 
