added shift based /10 and %10 algorithm for decimal number printf

--- a/libc/libc.config
+++ b/libc/libc.config
@@ -89,22 +89,29 @@
 %config end
 
 %config CONFIG_LIBC_FORMATTER_SIMPLE
-  parent CONFIG_LIBC
+  parent CONFIG_LIBC_FORMATTER_PRINTF
   desc Reduce printk and printf functions formater algorithm features to bare minimum.
   suggest_when CONFIG_COMPILE_OPTIMIZE=s
 %config end
 
 %config CONFIG_LIBC_FORMATTER_FLOAT
   desc Provide floats support for printf related functions
-  parent CONFIG_LIBC
+  parent CONFIG_LIBC_FORMATTER_PRINTF
   provide CONFIG_LICENSE_USE_GPL
   suggest_when CONFIG_LIBM
 %config end
 
 %config CONFIG_LIBC_FORMATTER_HEXDUMP
-  parent CONFIG_LIBC
+  parent CONFIG_LIBC_FORMATTER_PRINTF
   flags auto
   desc Enable smart hexadecimal dump formater algorithm
+%config end
+
+%config CONFIG_LIBC_FORMATTER_DIV10
+  parent CONFIG_LIBC_FORMATTER_PRINTF
+  desc Use compiler 64 bits divide and mod operations to output decimal numbers.
+  desc This will rely on processor instructions or libgcc stuff. The default is
+  desc to use a shift based algorithm instead.
 %config end
 
 ######################################################################
