--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -190,6 +190,20 @@
   desc Enable GPIO device support
 %config end
 
+%config CONFIG_DEVICE_GPIO_MAX_ID
+  parent CONFIG_DEVICE_GPIO
+  desc Specify the log2 of the maximum gpio pin id
+  flags value maxval
+  default 8
+%config end
+
+%config CONFIG_DEVICE_GPIO_MAX_WIDTH
+  parent CONFIG_DEVICE_GPIO
+  desc Specify the log2 of the maximum gpio pin range size
+  flags value maxval
+  default 8
+%config end
+
 %config CONFIG_DEVICE_I2C
   parent CONFIG_DEVICE
   flags auto
