added KROUTINE_TRIGGER kroutine policy

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -305,6 +305,12 @@
   depend CONFIG_MUTEK_SCHEDULER
 %config end
 
+%config CONFIG_MUTEK_KROUTINE_TRIGGER
+  desc Support deferred execution of kernel routine on a function call trigger
+  parent CONFIG_MUTEK
+  flags auto
+%config end
+
 ######################################################################
 #		Memory allocator
 
