SPI device scheduler updated to use KROUTINE_TRIGGER

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -167,8 +167,16 @@
 %config CONFIG_DEVICE_SPI_REQUEST
   parent CONFIG_DEVICE_SPI
   depend CONFIG_MUTEK_BYTECODE
+  depend CONFIG_MUTEK_KROUTINE_TRIGGER
   flags auto
   desc Enable SPI device requests scheduler
+%config end
+
+%config CONFIG_DEVICE_SPI_REQUEST_TIMER
+  parent CONFIG_DEVICE_SPI_REQUEST
+  depend CONFIG_DEVICE_TIMER
+  flags auto
+  desc Enable SPI device requests scheduler time handling
 %config end
 
 %config CONFIG_DEVICE_ENUM
