update hello example with pthread main wrapper Update the hello example to use the pthread api and in particular the main wrapper. The application entry point is then now main instead of app_start.
Signed-off-by: Julien Peeters <contact@julienpeeters.net>

--- a/examples/hello/config
+++ b/examples/hello/config
@@ -9,7 +9,8 @@
 
   # Libs
   CONFIG_PTHREAD
-  CONFIG_APP_START
+  CONFIG_PTHREAD_MAIN
 
+  %include scripts/options.build
   %include arch/arch.build
 
