stm32: add support for high performance mode The stm32f4xx architecture is clocked at 16MHz on reset. Other models would probably be clocked at a lower frequency on reset. This commit propose a very basic implementation of clock configuration for reaching the maximum frequency. In the case of the stm32f401re platform, this is 85MHz.
Signed-off-by: Julien Peeters <contact@julienpeeters.net>

--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -26,9 +26,24 @@
   default 0x40004400
 %config end
 
+%config CONFIG_STM32_EARLY_CONSOLE_UART_BAUDRATE
+  desc Address of the STM32 UART used for early console output
+  parent CONFIG_STM32_EARLY_CONSOLE_UART
+  flags value
+  default 115200
+%config end
+
 %init INIT_STM32_EARLY_CONSOLE_UART
   parent CONFIG_STM32_EARLY_CONSOLE_UART
   during INIT_MUTEK_EARLY_CONSOLE
   function stm32_early_console_init
+%init end
+
+%init INIT_STM32_FREQ_SCALING
+  parent CONFIG_ARCH_STM32
+  during INIT_BOOTSTRAP
+  after INIT_MEMORY_SECTIONS
+  before INIT_STM32_EARLY_CONSOLE_UART
+  function stm32_freq_scaling_init
 %init end
 
