stm32: add support for generic register access This commit proposes a generic way to access registers using the output of the bfgen tool. This only works with specific options given to bfgen. One need to activate these flags: cdefs_use_field_mask, cdefs_use_field_set, cdefs_use_field_get, cdefs_use_reg_mask.
There is also a requirement on the prefix but the value is specific to the
platform.

Signed-off-by: Julien Peeters <contact@julienpeeters.net>

--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -33,6 +33,19 @@
   default 115200
 %config end
 
+%config CONFIG_BOARD_STM32
+  desc STM32 board definition
+  parent CONFIG_ARCH_STM32
+  flags internal
+  when CONFIG_STM32_BOARD_STM32F401RE
+  single CONFIG_STM32_BOARD_STM32F401RE
+%config end
+
+%config CONFIG_STM32_BOARD_STM32F401RE
+  desc STM32 BOARD STM32F401RE
+  parent CONFIG_BOARD_STM32
+%config end
+
 %init INIT_STM32_EARLY_CONSOLE_UART
   parent CONFIG_STM32_EARLY_CONSOLE_UART
   during INIT_MUTEK_EARLY_CONSOLE
