--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -224,3 +224,37 @@
   desc Enable memory device support
 %config end
 
+%config CONFIG_DEVICE_IOMUX
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable IO pin muxing support
+%config end
+
+%config CONFIG_DEVICE_IOMUX_MAX_DEMUX
+  parent CONFIG_DEVICE_IOMUX
+  desc Specify the log2 of the maximum IO demux selector value
+  flags value maxval
+  default 5
+%config end
+
+%config CONFIG_DEVICE_IOMUX_MAX_ID
+  parent CONFIG_DEVICE_IOMUX
+  desc Specify the log2 of the maximum IO id
+  flags value maxval
+  default 10
+%config end
+
+%config CONFIG_DEVICE_IOMUX_MAX_MUX
+  parent CONFIG_DEVICE_IOMUX
+  desc Specify the log2 of the maximum IO mux selector value
+  flags value maxval
+  default 5
+%config end
+
+%config CONFIG_DEVICE_IOMUX_MAX_CONFIG
+  parent CONFIG_DEVICE_IOMUX
+  desc Specify the number of bits of the IO controller specific configuration value
+  flags value maxval
+  default 12
+%config end
+
