efm32: use iomux device class

--- a/arch/efm32/Makefile
+++ b/arch/efm32/Makefile
@@ -1,6 +1,17 @@
 
-objs =											\
-arch_init.o										\
+objs = arch_init.o
+
+ifeq ($(CONFIG_EFM32_STK3200),defined)
+objs += dev_stk3200.o
+endif
+
+ifeq ($(CONFIG_EFM32_STK3600),defined)
+objs += dev_stk3600_3800.o
+endif
+
+ifeq ($(CONFIG_EFM32_STK3800),defined)
+objs += dev_stk3600_3800.o
+endif
 
 ifeq ($(CONFIG_MUTEK_EARLY_CONSOLE),defined)
 objs += early_console.o
