--- a/arch/efm32/drivers/gpio/gpio.config
+++ b/arch/efm32/drivers/gpio/gpio.config
@@ -2,13 +2,14 @@
 %config CONFIG_DRIVER_EFM32_GPIO
   desc Enable EFM32 GPIO driver
   parent CONFIG_ARCH_EFM32
+  depend CONFIG_DEVICE_IOMUX
   depend CONFIG_DEVICE_GPIO
-  depend CONFIG_DEVICE_IRQ
 %config end
 
 %config CONFIG_DRIVER_EFM32_GPIO_ICU
   desc Enable use of the EFM32 GPIO as an irq controller
   parent CONFIG_DRIVER_EFM32_GPIO
+  depend CONFIG_DEVICE_IRQ
   depend CONFIG_DEVICE_ICU
   default defined
 %config end
