--- a/arch/efm32/drivers/usart/usart.config
+++ b/arch/efm32/drivers/usart/usart.config
@@ -2,6 +2,7 @@
 %config CONFIG_DRIVER_EFM32_USART
   desc Enable EFM32 USART driver
   parent CONFIG_ARCH_EFM32
+  depend CONFIG_DEVICE_IOMUX
 %config end
 
 %config CONFIG_DRIVER_EFM32_USART_CHAR
