--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -38,8 +38,8 @@
   flags value
 %config end
 
-%config CONFIG_EFM32_EARLY_CONSOLE_LEUART_STK3200
-  desc Efm32 early console output using LEUART on the STK3200 zero gecko starter kit
+%config CONFIG_EFM32_STK3200
+  desc Efm32 support for STK3200 zero gecko starter kit
   parent CONFIG_ARCH_EFM32
   provide CONFIG_MUTEK_EARLY_CONSOLE
   require CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
@@ -47,13 +47,13 @@
 %config end
 
 %init INIT_EFM32_EARLY_CONSOLE_LEUART_STK3200
-  parent CONFIG_EFM32_EARLY_CONSOLE_LEUART_STK3200
+  parent CONFIG_EFM32_STK3200
   during INIT_MUTEK_EARLY_CONSOLE
   function efm32_early_console_leuart_init
 %init end
 
-%config CONFIG_EFM32_EARLY_CONSOLE_LEUART_STK3600
-  desc Efm32 early console output using LEUART on the STK3600 leopard gecko starter kit
+%config CONFIG_EFM32_STK3600
+  desc Efm32 support for STK3600 leopard gecko starter kit
   parent CONFIG_ARCH_EFM32
   provide CONFIG_MUTEK_EARLY_CONSOLE
   require CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
@@ -61,13 +61,13 @@
 %config end
 
 %init INIT_EFM32_EARLY_CONSOLE_LEUART_STK3600
-  parent CONFIG_EFM32_EARLY_CONSOLE_LEUART_STK3600
+  parent CONFIG_EFM32_STK3600
   during INIT_MUTEK_EARLY_CONSOLE
   function efm32_early_console_leuart_init
 %init end
 
-%config CONFIG_EFM32_EARLY_CONSOLE_LEUART_STK3800
-  desc Efm32 early console output using LEUART on the STK3800 Wonder gecko starter kit
+%config CONFIG_EFM32_STK3800
+  desc Efm32 support for STK3800 Wonder gecko starter kit
   parent CONFIG_ARCH_EFM32
   provide CONFIG_MUTEK_EARLY_CONSOLE
   require CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
@@ -75,7 +75,7 @@
 %config end
 
 %init INIT_EFM32_EARLY_CONSOLE_LEUART_STK3800
-  parent CONFIG_EFM32_EARLY_CONSOLE_LEUART_STK3800
+  parent CONFIG_EFM32_STK3800
   during INIT_MUTEK_EARLY_CONSOLE
   function efm32_early_console_leuart_init
 %init end
