--- a/arch/efm32/drivers/leuart/leuart.config
+++ b/arch/efm32/drivers/leuart/leuart.config
@@ -3,6 +3,7 @@
   desc Enable EFM32 Low Energy UART driver
   parent CONFIG_ARCH_EFM32
   depend CONFIG_DEVICE_CHAR
+  depend CONFIG_DEVICE_IOMUX
   suggest CONFIG_DEVICE_IRQ
 %config end
 
