--- a/arch/stm32/drivers/Makefile
+++ b/arch/stm32/drivers/Makefile
@@ -7,3 +7,7 @@ ifeq ($(CONFIG_DRIVER_STM32_I2C), defined)
 subdirs += i2c
 endif
 
+ifeq ($(CONFIG_DRIVER_STM32_GPIO), defined)
+subdirs += gpio
+endif
+
