stm32: rename files specific to stm32f401re board

--- a/arch/stm32/Makefile
+++ b/arch/stm32/Makefile
@@ -1,6 +1,9 @@
 
-objs =											\
-	arch_init.o									\
+objs =
+
+ifeq ($(CONFIG_BOARD_STM32_F401RE), defined)
+objs += board_stm32_f401re.o
+endif
 
 ifeq ($(CONFIG_STM32_EARLY_CONSOLE_UART), defined)
 objs += early_console.o
