stm32: add support for interrupts in gpio driver

--- a/arch/stm32/drivers/gpio/gpio.config
+++ b/arch/stm32/drivers/gpio/gpio.config
@@ -6,3 +6,18 @@
   depend CONFIG_DEVICE_IOMUX
 %config end
 
+%config CONFIG_DRIVER_STM32_GPIO_ICU
+  desc Enable GPIO as interrupt source
+  parent CONFIG_DRIVER_STM32_GPIO
+  depend CONFIG_DEVICE_IRQ
+  depend CONFIG_DEVICE_ICU
+  default defined
+%config end
+
+%config CONFIG_DRIVER_STM32_GPIO_IRQ_COUNT
+  desc IRQ count as interrupt sources
+  parent CONFIG_DRIVER_STM32_GPIO_ICU
+  flags value
+  default 16
+%config end
+
