bcm2835: add drivers for spi and gpio

--- a/arch/raspberry/drivers/Makefile
+++ b/arch/raspberry/drivers/Makefile
@@ -7,3 +7,10 @@ ifeq ($(CONFIG_DRIVER_SYSTIMER_BCM2835), defined)
 subdirs += bcm2835_systimer
 endif
 
+ifeq ($(CONFIG_DRIVER_GPIO_BCM2835), defined)
+subdirs += bcm2835_gpio
+endif
+
+ifeq ($(CONFIG_DRIVER_SPI_BCM2835), defined)
+subdirs += bcm2835_spi
+endif
