stm32: try to add software fifo to usart

--- a/arch/stm32/drivers/usart/usart.config
+++ b/arch/stm32/drivers/usart/usart.config
@@ -3,6 +3,14 @@
   desc Driver for USART on STM32F4xx boards.
   parent CONFIG_ARCH_STM32
   depend CONFIG_DEVICE_CHAR
+  depend CONFIG_DEVICE_IOMUX
   suggest CONFIG_DEVICE_IRQ
+%config end
+
+%config CONFIG_DRIVER_STM32_USART_SWFIFO
+  desc Depth of USART software FIFO (0 disable the FIFO).
+  parent CONFIG_DRIVER_STM32_USART
+  flags value
+  default 0
 %config end
 
