added support for efm32 Gecko and efm32-g8xx-stk board

--- a/arch/efm32/Makefile
+++ b/arch/efm32/Makefile
@@ -13,6 +13,10 @@ ifeq ($(CONFIG_EFM32_STK3800),defined)
 objs += dev_stk3600_3800.o
 endif
 
+ifeq ($(CONFIG_EFM32_G8XX_STK),defined)
+objs += dev_g8xxstk.o
+endif
+
 ifeq ($(CONFIG_MUTEK_EARLY_CONSOLE),defined)
 objs += early_console.o
 endif
