--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -4,7 +4,7 @@
   module arch Hexo
   parent CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=efm32
-  single CONFIG_EFM32_ZERO_GECKO CONFIG_EFM32_LEOPARD_GECKO CONFIG_EFM32_WONDER_GECKO
+  single CONFIG_EFM32_GECKO CONFIG_EFM32_ZERO_GECKO CONFIG_EFM32_LEOPARD_GECKO CONFIG_EFM32_WONDER_GECKO
 %config end
 
 %init INIT_EFM32_MEM_ALLOC
@@ -37,6 +37,20 @@
   default 0x40084000
   flags value
 %config end
+
+%config CONFIG_EFM32_G8XX_STK
+  desc Efm32 support for G8xx gecko starter kit
+  parent CONFIG_ARCH_EFM32
+  provide CONFIG_MUTEK_EARLY_CONSOLE
+  require CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
+  depend CONFIG_EFM32_GECKO
+%config end
+
+%init INIT_EFM32_EARLY_CONSOLE_LEUART_G8XX_STK
+  parent CONFIG_EFM32_G8XX_STK
+  during INIT_MUTEK_EARLY_CONSOLE
+  function efm32_early_console_leuart_init
+%init end
 
 %config CONFIG_EFM32_STK3200
   desc Efm32 support for STK3200 zero gecko starter kit
