device: add primary implementation of clock management (wip)

--- a/libdevice/Makefile
+++ b/libdevice/Makefile
@@ -53,3 +53,7 @@ ifeq ($(CONFIG_DEVICE_IOMUX), defined)
 objs += device_iomux.o
 endif
 
+ifeq ($(CONFIG_DEVICE_CLOCK), defined)
+objs += device_clock.o
+endif
+
