--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -258,3 +258,9 @@
   default 12
 %config end
 
+%config CONFIG_DEVICE_CLOCK
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable clock management support
+%config end
+
