stm32: add proof-of-concept rcc driver (wip)

--- a/arch/stm32/drivers/Makefile
+++ b/arch/stm32/drivers/Makefile
@@ -11,3 +11,7 @@ ifeq ($(CONFIG_DRIVER_STM32_GPIO), defined)
 subdirs += gpio
 endif
 
+ifeq ($(CONFIG_DRIVER_STM32_RCC), defined)
+subdirs += rcc
+endif
+
