added missing efm32 Gecko config token

--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -13,6 +13,12 @@
   function efm32_mem_init
 %init end
 
+%config CONFIG_EFM32_GECKO
+  desc Support for EFM32 Gecko family of microcontrollers
+  parent CONFIG_ARCH_EFM32
+  depend CONFIG_CPU_ARM_CORTEXM3
+%config end
+
 %config CONFIG_EFM32_ZERO_GECKO
   desc Support for EFM32 Zero Gecko family of microcontrollers
   parent CONFIG_ARCH_EFM32
