--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -264,3 +264,51 @@
   desc Enable clock management support
 %config end
 
+%config CONFIG_DEVICE_UART
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable UART device support
+%config end
+
+%config CONFIG_DEVICE_UART_MAX_BAUDRATE
+  parent CONFIG_DEVICE_UART
+  desc Specify the log2 of maximum baudrate choices
+  flags value maxval
+  default 4
+%config end
+
+%config CONFIG_DEVICE_UART_MAX_DATA_BITS
+  parent CONFIG_DEVICE_UART
+  desc Specify the log2 of maximum data bit choices
+  flags value maxval
+  default 2
+%config end
+
+%config CONFIG_DEVICE_UART_MAX_STOP_BITS
+  parent CONFIG_DEVICE_UART
+  desc Specify the log2 of maximum stop bit choices
+  flags value maxval
+  default 2
+%config end
+
+%config CONFIG_DEVICE_UART_MAX_PARITY
+  parent CONFIG_DEVICE_UART
+  desc Specify the log2 of maximum parity choices
+  flags value maxval
+  default 2
+%config end
+
+%config CONFIG_DEVICE_UART_MAX_FLOW_CTRL
+  parent CONFIG_DEVICE_UART
+  desc Specify the log2 of maximum flow control choices
+  flags value maxval
+  default 1
+%config end
+
+%config CONFIG_DEVICE_UART_MAX_HALF_DUPLEX
+  parent CONFIG_DEVICE_UART
+  desc Specify the log2 of maximum half duplex choices
+  flags value maxval
+  default 1
+%config end
+
