stm32: update usart driver with uart class support

--- a/arch/stm32/drivers/usart/usart.config
+++ b/arch/stm32/drivers/usart/usart.config
@@ -4,6 +4,7 @@
   parent CONFIG_ARCH_STM32
   depend CONFIG_DEVICE_CHAR
   depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_UART
   suggest CONFIG_DEVICE_IRQ
 %config end
 
