stm32: massive driver renaming

--- a/arch/stm32/drivers/gpio/gpio.config
+++ b/arch/stm32/drivers/gpio/gpio.config
@@ -1,6 +1,6 @@
 
 %config CONFIG_DRIVER_STM32_GPIO
-  desc Driver for GPIO controller on STM32F4xx boards.
+  desc Driver for GPIO controller on STM32 boards.
   parent CONFIG_ARCH_STM32
   depend CONFIG_DEVICE_GPIO
   depend CONFIG_DEVICE_IOMUX
