--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -46,6 +46,12 @@
   parent CONFIG_BOARD_STM32
 %config end
 
+%config CONFIG_DEVICE_HELPER_PREFIX
+  desc Device helper prefix
+  parent CONFIG_DEVICE
+  flags value
+%config end
+
 %init INIT_STM32_EARLY_CONSOLE_UART
   parent CONFIG_STM32_EARLY_CONSOLE_UART
   during INIT_MUTEK_EARLY_CONSOLE
