added a modular interactive shell feature

--- a/libtermui/termui.config
+++ b/libtermui/termui.config
@@ -3,6 +3,7 @@
   desc Enable libtermui
   module libtermui Terminal driver library
   provide CONFIG_LICENSE_USE_GPL
+  flags auto
 %config end
 
 %config CONFIG_LIBTERMUI_GETLINE
@@ -14,16 +15,11 @@
 %config CONFIG_LIBTERMUI_CONSOLE
   desc Enable libtermui console user interface feature
   parent CONFIG_LIBTERMUI
+  flags auto
 %config end
 
 %config CONFIG_LIBTERMUI_CON_ACL
   desc Enable console access control
-  parent CONFIG_LIBTERMUI_CONSOLE
-  default defined
-%config end
-
-%config CONFIG_LIBTERMUI_CON_ALIAS
-  desc Enable console command aliases
   parent CONFIG_LIBTERMUI_CONSOLE
   default defined
 %config end
@@ -50,7 +46,7 @@
 
 %config CONFIG_LIBTERMUI_CON_MAXCOMPLETE
   desc Console completion max candidates count
-  default 512
+  default 64
   parent CONFIG_LIBTERMUI_CONSOLE
   flags value
 %config end
