--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -140,8 +140,6 @@
   function mutek_console_initsmp mutek_console_cleanupsmp
 %init end
 
-
-
 %config CONFIG_MUTEK_EARLY_CONSOLE
   desc Indicate early primitive text console is used at startup
   parent CONFIG_MUTEK
@@ -156,6 +154,13 @@
   before INIT_MUTEK_MEMALLOC
   flags notempty
 %init end
+
+%config CONFIG_MUTEK_SHELL
+  parent CONFIG_MUTEK
+  desc Enable support for mutek interactive command shell
+  depend CONFIG_MUTEK_CONSOLE
+  depend CONFIG_LIBTERMUI_CONSOLE
+%config end
 
 %config CONFIG_MUTEK_LOGO
   desc Add builtin MutekH logo bitmap to the kernel
