--- a/arch/stm32/drivers/i2c/i2c.config
+++ b/arch/stm32/drivers/i2c/i2c.config
@@ -1,7 +1,13 @@
 
 %config CONFIG_DRIVER_STM32_I2C
-  desc Driver for I2C on STM32F4xx boards.
+  desc Driver for I2C on STM32 boards.
   parent CONFIG_ARCH_STM32
   depend CONFIG_DEVICE_I2C
+%config end
+
+%config CONFIG_DRIVER_STM32_I2C_REQUEST
+  desc Enable support for requests in I2C driver
+  parent CONFIG_DRIVER_STM32_I2C
+  depend CONFIG_DEVICE_I2C_REQUEST
 %config end
 
