added get_freq function to the timer device class

--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -188,6 +188,13 @@
   when CONFIG_CPU_ARM_CORTEXA9
 %config end
 
+%config CONFIG_CPU_ARM_TIMER_CYCLECOUNTER
+  desc Enable timer driver for ARM-v6 cycle counter
+  parent CONFIG_CPU_ARM_ARCH_PROFILE_A
+  when CONFIG_CPU_ARM_ARCH_VERSION>=6
+  depend CONFIG_DEVICE_TIMER
+%config end
+
 %config CONFIG_CPU_ARM_ARCH_PROFILE_M
   desc ARM processor microcontroller architecture profile
   flags internal harddep
@@ -246,11 +253,20 @@
   desc Enable timer driver for ARM-m SysTick
   parent CONFIG_CPU_ARM_ARCH_PROFILE_M
   default defined
+  depend CONFIG_DEVICE_TIMER
+%config end
+
+%config CONFIG_CPU_ARM_TIMER_SYSTICK_PERIOD
+  desc Set the initial SysTick timer period
+  parent CONFIG_CPU_ARM_TIMER_SYSTICK
+  default 1000000
+  flags value
 %config end
 
 %config CONFIG_CPU_ARM_TIMER_DWTCYC
   desc Enable timer driver for ARM-v7m DWT cycle counter
   parent CONFIG_CPU_ARM_ARCH_PROFILE_M
   when CONFIG_CPU_ARM_ARCH_VERSION>=7
+  depend CONFIG_DEVICE_TIMER
 %config end
 
