--- a/cpu/avr32/avr32.config
+++ b/cpu/avr32/avr32.config
@@ -49,3 +49,10 @@
   exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
+%config CONFIG_CPU_AVR32_TIMER_CYCLECOUNTER
+  desc Enable timer driver for Avr32 cycle counter
+  parent CONFIG_CPU_AVR32
+  depend CONFIG_DEVICE_TIMER
+  default defined
+%config end
+
