--- a/cpu/lm32/lm32.config
+++ b/cpu/lm32/lm32.config
@@ -73,3 +73,11 @@
   desc Lm32 processor irq lines count
   default 1
 %config end
+
+%config CONFIG_CPU_LM32_TIMER_CYCLECOUNTER
+  desc Enable timer driver for lm32 cycle counter
+  parent CONFIG_CPU_LM32
+  depend CONFIG_DEVICE_TIMER
+  default defined
+%config end
+
