--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -104,3 +104,10 @@
   when CONFIG_CPU_MIPS_VERSION>2
 %config end
 
+%config CONFIG_CPU_MIPS_TIMER_CYCLECOUNTER
+  desc Enable timer driver for mips cycle counter
+  parent CONFIG_CPU_MIPS
+  when CONFIG_CPU_MIPS_VERSION>=32
+  depend CONFIG_DEVICE_TIMER
+%config end
+
