--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -60,3 +60,10 @@
   default 0x00002000
 %config end
 
+%config CONFIG_CPU_X86_TIMER_CYCLECOUNTER
+  desc Enable timer driver for x86 cycle counter
+  parent CONFIG_CPU_X86
+  depend CONFIG_DEVICE_TIMER
+  default defined
+%config end
+
