--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -118,15 +118,6 @@
   desc Enable timer devices support
 %config end
 
-%config CONFIG_DEVICE_TIMER_DEFAULT_FREQ
-  parent CONFIG_DEVICE_TIMER
-  flags value
-  desc This specifies the default timer input frequency.
-  desc This value is used as default value for time unit conversion operations
-  desc when a timer has no frequency resource entry in the device tree.
-  default 1000000
-%config end
-
 %config CONFIG_DEVICE_ICU
   parent CONFIG_DEVICE
   depend CONFIG_DEVICE_IRQ
@@ -271,6 +262,43 @@
   flags auto
   desc Enable clock management support
 %config end
+
+
+%config CONFIG_DEVICE_CLOCK_MAX_ID
+  parent CONFIG_DEVICE_CLOCK
+  desc Specify the log 2 of the maximum node id
+  flags value maxval
+  default 6
+%config end
+
+%config CONFIG_DEVICE_CLOCK_MAX_CONFIG
+  parent CONFIG_DEVICE_CLOCK
+  desc Specify the maximum number of clock configurations (= bit width of the mask)
+  flags value maxval
+  default 6
+%config end
+
+%config CONFIG_DEVICE_CLOCK_FRAC_WIDTH
+  parent CONFIG_DEVICE_CLOCK
+  desc Specify the number of bits used to store numerator and denominator of frequency ratios.
+  flags value maxval
+  default 16
+%config end
+
+%config CONFIG_DEVICE_CLOCK_OSCN_WIDTH
+  parent CONFIG_DEVICE_CLOCK
+  desc Specify the number of bits used to store numerator of frequency values.
+  flags value maxval
+  default 36
+%config end
+
+%config CONFIG_DEVICE_CLOCK_OSCD_WIDTH
+  parent CONFIG_DEVICE_CLOCK
+  desc Specify the number of bits used to store numerator of frequency values.
+  flags value maxval
+  default 4
+%config end
+
 
 %config CONFIG_DEVICE_UART
   parent CONFIG_DEVICE
