--- a/cpu/nios2/nios.config
+++ b/cpu/nios2/nios.config
@@ -69,3 +69,10 @@
   when CONFIG_CPU_NIOS2_SOCLIB
 %config end
 
+%config CONFIG_CPU_NIOS_TIMER_CYCLECOUNTER
+  desc Enable timer driver for Nios2 cycle counter
+  parent CONFIG_CPU_NIOS2
+  depend CONFIG_DEVICE_TIMER
+  default defined
+%config end
+
