--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -62,3 +62,10 @@
   flags meta
 %config end
 
+%config CONFIG_CPU_PPC_TIMER_CYCLECOUNTER
+  desc Enable timer driver for PPC cycle counter
+  parent CONFIG_CPU_PPC
+  depend CONFIG_DEVICE_TIMER
+  default defined
+%config end
+
