efm32: added support for device clock tree

--- a/arch/efm32/drivers/Makefile
+++ b/arch/efm32/drivers/Makefile
@@ -17,7 +17,13 @@ endif
 
 ifeq ($(CONFIG_DRIVER_EFM32_GPIO), defined)
 subdirs += gpio
+endif
 
 ifeq ($(CONFIG_DRIVER_EFM32_I2C), defined)
 subdirs += i2c
 endif
+
+ifeq ($(CONFIG_DRIVER_EFM32_RECMU), defined)
+subdirs += recmu
+endif
+
