added ARM NULL pointer access and stack guard using Memory Protection Unit

--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -270,3 +270,22 @@
   depend CONFIG_DEVICE_TIMER
 %config end
 
+%config CONFIG_CPU_ARM_MPU_NULL_PTR
+  desc Use the Memory Protection Unit of ARM-m processor to catch NULL pointer access
+  parent CONFIG_CPU_ARM_ARCH_PROFILE_M
+%config end
+
+%config CONFIG_CPU_ARM_MPU_STACK_GUARD
+  desc Use the Memory Protection Unit of ARM-m processor to catch access near the end of context stack
+  parent CONFIG_CPU_ARM_ARCH_PROFILE_M
+  require CONFIG_HEXO_STACK_ALIGN>=32
+%config end
+
+%config CONFIG_CPU_ARM_MPU_STACK_GUARD_SIZE
+  desc Defines the number of bytes at the top of the stack which can not be used.
+  desc Allowed values are 32, 64, 128, 256
+  parent CONFIG_CPU_ARM_MPU_STACK_GUARD
+  flags value
+  default 32
+%config end
+
