--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -4,7 +4,7 @@
   module arch Hexo
   parent CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=efm32
-  single CONFIG_EFM32_GECKO CONFIG_EFM32_ZERO_GECKO CONFIG_EFM32_LEOPARD_GECKO CONFIG_EFM32_WONDER_GECKO
+  single CONFIG_EFM32_GECKO CONFIG_EFM32_ZERO_GECKO CONFIG_EFM32_LEOPARD_GECKO CONFIG_EFM32_WONDER_GECKO CONFIG_EFM32_GIANT_GECKO
 %config end
 
 %init INIT_EFM32_MEM_ALLOC
@@ -35,6 +35,12 @@
   desc Support for EFM32 Wonder Gecko family of microcontrollers
   parent CONFIG_ARCH_EFM32
   depend CONFIG_CPU_ARM_CORTEXM4
+%config end
+
+%config CONFIG_EFM32_GIANT_GECKO
+  desc Support for EFM32 Giant Gecko family of microcontrollers
+  parent CONFIG_ARCH_EFM32
+  depend CONFIG_CPU_ARM_CORTEXM3
 %config end
 
 %config CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
@@ -96,6 +102,20 @@
 
 %init INIT_EFM32_EARLY_CONSOLE_LEUART_STK3800
   parent CONFIG_EFM32_STK3800
+  during INIT_MUTEK_EARLY_CONSOLE
+  function efm32_early_console_leuart_init
+%init end
+
+%config CONFIG_EFM32_STK3700
+  desc Efm32 support for STK3700 Giant gecko starter kit
+  parent CONFIG_ARCH_EFM32
+  provide CONFIG_MUTEK_EARLY_CONSOLE
+  require CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
+  depend CONFIG_EFM32_GIANT_GECKO
+%config end
+
+%init INIT_EFM32_EARLY_CONSOLE_LEUART_STK3700
+  parent CONFIG_EFM32_STK3700
   during INIT_MUTEK_EARLY_CONSOLE
   function efm32_early_console_leuart_init
 %init end
