added support for ARM non-aligned memory access and byte swapping instructions

--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -33,6 +33,7 @@
   provide CONFIG_CPU_NAME=arm1176
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=6
+  provide CONFIG_CPU_NONALIGNED_ACCESS
 %config end
 
 %config CONFIG_CPU_ARM_1176F
@@ -44,6 +45,7 @@
   provide CONFIG_CPU_NAME=arm1176f
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=6
+  provide CONFIG_CPU_NONALIGNED_ACCESS
 %config end
 
 %config CONFIG_CPU_ARM_CORTEXA8
@@ -56,6 +58,7 @@
   provide CONFIG_CPU_NAME=arm_cortex_a8
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=7
+  provide CONFIG_CPU_NONALIGNED_ACCESS
 %config end
 
 %config CONFIG_CPU_ARM_CORTEXA9
@@ -68,6 +71,7 @@
   provide CONFIG_CPU_NAME=arm_cortex_a9
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=7
+  provide CONFIG_CPU_NONALIGNED_ACCESS
 %config end
 
 %config CONFIG_CPU_ARM_CORTEXM0
@@ -108,6 +112,7 @@
   provide CONFIG_CPU_NAME=arm_cortex_m3
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=7
+  provide CONFIG_CPU_NONALIGNED_ACCESS
 %config end
 
 %config CONFIG_CPU_ARM_CORTEXM4
@@ -118,6 +123,7 @@
   provide CONFIG_CPU_NAME=arm_cortex_m4
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=7
+  provide CONFIG_CPU_NONALIGNED_ACCESS
 %config end
 
 %config CONFIG_CPU_ARM_THUMB
