removed unused defines from cpu/hexo/endian.h headers

--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -39,6 +39,7 @@
   parent CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU
   desc Enable memory access alignement checking on x86 processors.
   desc Warning: gcc may generate non aligned accesses in memset.
+  exclude CONFIG_CPU_NONALIGNED_ACCESS
 %config end
 
 %config CONFIG_CPU_X86_APIC
