--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -5,6 +5,7 @@
   parent CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=efm32
   single CONFIG_EFM32_GECKO CONFIG_EFM32_ZERO_GECKO CONFIG_EFM32_LEOPARD_GECKO CONFIG_EFM32_WONDER_GECKO CONFIG_EFM32_GIANT_GECKO
+  require CONFIG_EFM32_FLASH_PAGE_SIZE
 %config end
 
 %init INIT_EFM32_MEM_ALLOC
@@ -13,34 +14,45 @@
   function efm32_mem_init
 %init end
 
+%config CONFIG_EFM32_FLASH_PAGE_SIZE
+  desc Specify the log2 of the flash page size
+  parent CONFIG_ARCH_EFM32
+  flags value
+%config end
+
 %config CONFIG_EFM32_GECKO
   desc Support for EFM32 Gecko family of microcontrollers
   parent CONFIG_ARCH_EFM32
   depend CONFIG_CPU_ARM_CORTEXM3
+  provide CONFIG_EFM32_FLASH_PAGE_SIZE=9
 %config end
 
 %config CONFIG_EFM32_ZERO_GECKO
   desc Support for EFM32 Zero Gecko family of microcontrollers
   parent CONFIG_ARCH_EFM32
   depend CONFIG_CPU_ARM_CORTEXM0
+  provide CONFIG_EFM32_FLASH_PAGE_SIZE=10
 %config end
 
 %config CONFIG_EFM32_LEOPARD_GECKO
   desc Support for EFM32 Leopard Gecko family of microcontrollers
   parent CONFIG_ARCH_EFM32
   depend CONFIG_CPU_ARM_CORTEXM3
+  provide CONFIG_EFM32_FLASH_PAGE_SIZE=11
 %config end
 
 %config CONFIG_EFM32_WONDER_GECKO
   desc Support for EFM32 Wonder Gecko family of microcontrollers
   parent CONFIG_ARCH_EFM32
   depend CONFIG_CPU_ARM_CORTEXM4
+  provide CONFIG_EFM32_FLASH_PAGE_SIZE=11
 %config end
 
 %config CONFIG_EFM32_GIANT_GECKO
   desc Support for EFM32 Giant Gecko family of microcontrollers
   parent CONFIG_ARCH_EFM32
   depend CONFIG_CPU_ARM_CORTEXM3
+  provide CONFIG_EFM32_FLASH_PAGE_SIZE=12
 %config end
 
 %config CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
