--- a/examples/vfs_stress/config
+++ b/examples/vfs_stress/config
@@ -6,6 +6,7 @@ CONFIG_LICENSE_APP_GPL
 CONFIG_MUTEK_MEMALLOC_SMART
 CONFIG_MUTEK_MEMALLOC_STATS
 # CONFIG_MUTEK_MEMALLOC_DEBUG
+CONFIG_APP_START
 
 # Scheduler
 CONFIG_PTHREAD
