--- a/libc/libc.config
+++ b/libc/libc.config
@@ -57,6 +57,10 @@
   function libc_time_initsmp libc_time_cleanupsmp
 %init end
 
+%config CONFIG_LIBC_VFS
+  depend CONFIG_VFS
+%config end
+
 %config CONFIG_LIBC_UNIXFD
   desc Enable C library Unix file descriptors based functions.
   require CONFIG_LIBC_MAX_FD
