--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -445,6 +445,9 @@
   parent CONFIG_MUTEK
 %config end
 
+%config CONFIG_MUTEK_BUFFER_POOL
+  desc Enable use of packet pool allocator.
+  parent CONFIG_MUTEK
 %config end
 
 ######################################################################
