device: add pwm class (proposal)

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -348,3 +348,9 @@
   default 1
 %config end
 
+%config CONFIG_DEVICE_PWM
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable PWM devices support
+%config end
+
