stm32: add pwm driver with multi-channel support

--- a/arch/stm32/drivers/Makefile
+++ b/arch/stm32/drivers/Makefile
@@ -15,3 +15,7 @@ ifeq ($(CONFIG_DRIVER_STM32_RCC), defined)
 subdirs += rcc
 endif
 
+ifeq ($(CONFIG_DRIVER_STM32_PWM), defined)
+subdirs += pwm
+endif
+
