libnetwork: made compile with gct

--- a/libnetwork/libsocket/socket.config
+++ b/libnetwork/libsocket/socket.config
@@ -1,6 +1,7 @@
 %config CONFIG_NETWORK_SOCKET
   desc Enable libsocket API support
   parent CONFIG_NETWORK
+  depend CONFIG_LIBC_SEMAPHORE
 %config end
 
 %config CONFIG_NETWORK_SOCKET_PACKET
